Adding 3rd party modules to gitignore
.. So we won't add them to our repo by mistake.

Signed-off-by: Thomas Karl Pietrowski <thopiekar@gmail.com> (github: thopiekar)

--- a/.gitignore
+++ b/.gitignore
@@ -95,5 +95,5 @@ ENV/
 .project
 .pydevproject
 
-# win32com - generated files
-ComFactory/win32com_dir/
+# Third party software
+SmartSlicePlugin/SmartSliceExtension/3rd-party/cpython-common/teton-*/*
